--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       # run unit tests
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       # run linter
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
